# CoMIC

./: .gitmodules  README.md
UserIdentificationUsing360DegreeVideo/: preprocessing.ipynb
content_delivery/: README.md
content_delivery/3DGS/: anti.js  build_matrix_A.py  full_down.js  goodbadvoxels.py  http2_color.js  http2_priority.js  nosp.js  optimal_voxelization.py  projection_model.py  readme.md  run_gurobi_flow.py  streaming_cuboids.py  vivo.js  voxel_gaussian.py  wo.js
content_delivery/Evaluation of a Inter-Predictive Point Cloud Codec for Tele-Immersive Video/: README.md
content_delivery/Evaluation of an Inter-Predictive Point Cloud Codec for Tele-Immersive Video/: README.md
content_delivery/Hemant Kumar _Code Check-in/: 2. UDP_Streaming_from_HoloLens.cs.txt  3. UDP_LaptopSender.py
content_delivery/TCP_UDP_Communication of HoloLens-2/: 3. UDP_Streaming_to_HoloLens.cs.txt
depth/: README.md
depth/DepthDataExportApp/: AppDelegate.swift  DepthDataCapture.swift  ViewController.swift
example/: README.md
example/6DOFGroup2_CS695/: README.md
example/check-in/: README.md  disruption.py  ovr_plot.py
holographic/: README.md
holographic/CS695_Codes/: Meta-camera-grab-frames.cpp  Meta-camera-optimized.cpp  Meta-camera-server.cpp  Meta-camera-test-samples.cpp  Meta-client.cpp  Meta-multicamera-client.cpp  Meta-multicamera-optimized.cpp  Meta-segnet.cpp  README.md  segnet-zed.cpp
immersive_teleoperation/: readme.md
immersive_teleoperation/kinect_teleoperate/: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/lib/: libk4a1.4-dev_1.4.1_amd64.deb  libk4abt1.1-dev_1.1.2_amd64.deb
immersive_teleoperation/kinect_teleoperate/src/: CMakeLists.txt  Makefile  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/: CMakeCache-old.txt  CMakeLists-old.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/CMakeFiles-old/: CMakeConfigureLog.yaml  Makefile.cmake  Makefile2  TargetDirectories.txt
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/CMakeFiles-old/kinect_teleoperate.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  compiler_depend.make  flags.make  link.txt
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/buildOld/: CMakeCache.txt  Makefile  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/buildOld/glfw_build/: Makefile  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/buildOld/glfw_build/src/: Makefile  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/buildOld/glfw_build/src/src/: Makefile  cmake_install.cmake  fractional-scale-v1-client-protocol-code.h  fractional-scale-v1-client-protocol.h  glfw3.pc  wayland-client-protocol-code.h  wayland-client-protocol.h  xdg-activation-v1-client-protocol.h  xdg-shell-client-protocol-code.h  xdg-shell-client-protocol.h
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/buildOld/window_controller_3d_build/: Makefile  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/glfw_build/: Makefile
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/glfw_build/src/: Makefile  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/glfw_build/src/src/: Makefile
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/include/: StartEndPoseDetector.hpp  jointRetargeting.hpp  math_tool.hpp
immersive_teleoperation/kinect_teleoperate/src/kinect_teleoperate_robot/window_controller_3d_build/: Makefile
immersive_teleoperation/kinect_teleoperate/src/mujoco-3.1.5/: THIRD_PARTY_NOTICES
immersive_teleoperation/kinect_teleoperate/src/sample_helper_libs/: Makefile  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/sample_helper_libs/window_controller_3d/: CMakeLists.txt  Makefile  Window3dWrapper.cpp  Window3dWrapper.h  WindowController3d.h  cmake_install.cmake
immersive_teleoperation/kinect_teleoperate/src/unitree_g1/: README.md  g1.xml
immersive_teleoperation/kinect_teleoperate/src/unitree_h1/: README.md
immersive_teleoperation/kinect_teleoperate/src/unitree_h1/mjcf/: h1.xml  h1_with_hand.xml  scene.xml
measurement/: Procedure - Group 3.docx  README.md
measurement/Readme/: ~$5Finaldocument2.docx
measurement/VRCHAT API/: README.md
open-ended_research_exploration/: README.md
open-ended_research_exploration/Hemant Kumar _Code Check-in/: 1. TCP_Client.py  1. TCP_SERVER.cs  2. UDP_Client.py  ReadMe.txt
open-ended_research_exploration/TCP_UDP_Communication of HoloLens-2/: ReadMe.txt
open-ended_research_exploration/check-in/: README.md
open_ended_research_exploration/AI_powered_video_call/: package-lock.json  package.json  readme  readme.md
open_ended_research_exploration/Hemant Kumar _Code Check-in/: 1. TCP_Client.py  ReadMe.txt
open_ended_research_exploration/TCP_UDP_Communication of HoloLens-2/: 1. TCP_SERVER.cs  2. UDP_Client.py  2. UDP_Streaming_from_HoloLens.cs.txt  3. UDP_LaptopSender.py  3. UDP_Streaming_to_HoloLens.cs.txt  ReadMe.txt
open_ended_research_exploration/measurement_RTC/: readme.md
privacy/: README.md
privacy/privacy-preserving-sfm/: README.md
privacy/privacy_preserving_localization/: README.md
privacy/user-identification-in-360-degree-videos/: README.md  classify_features_v5.py  classify_features_v5_no_overlapping_window.py
privacy/user-identification_gaze/: README.md  UserIdentification.ipynb
security/: README.md
security/FR based Authentication/: README.md
spatial/: README.md
spatial/3D_Reconstruction_GMU/: README.md
spatial/Performance Evaluation of 6DoF Localization with Point Cloud using RGB –D image/: ColmapCode.ipynb  MatlabCode.m  README.md  pose_estimation.ipynb  readme.docx
spatial/dwong_webpage/: Untitled.txt  (+2 more)
webxr/: README.md
(+7155 files in other folders)
